# ai-agent-ssh

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ai-ops-panel-prd.md  docker-compose.yml
.codex/: project-binding.json  requirement-dev-flow.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py  crypto.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: ai_provider.py  auth.py  deployment.py  server.py
backend/app/services/: ai_gateway.py  project_analyzer.py  server_snapshot.py  ssh_command.py  ssh_probe.py
backend/tests/: conftest.py  test_ai_gateway.py  test_ai_providers.py  test_api.py  test_auth.py  test_command_safety.py  test_crypto.py  test_deployment_plan.py  test_init_db.py  test_operations_api.py  test_project_analyzer.py  test_server_snapshot.py  test_servers.py
docs/: deployment.md  周报模板.md
docs/plans/: 2026-07-01-ai-ops-panel-scaffold.md
docs/智能体协作/: agent-roles.md  review-checklist.md  workflow.md
docs/需求/Milestone-1-基础面板/: architecture.md  delivery-summary.md  plan.md  prd.md  task-breakdown.md  todo.md
docs/需求模板/: architecture-template.md  delivery-summary-template.md  plan-template.md  prd-template.md  review-template.md  task-breakdown-template.md  todo-template.md
docs/项目上下文/: current-context.md  open-items.md  session-log.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
