[project]
name = "ai-agent-ssh-backend"
version = "0.1.0"
description = "FastAPI backend for the AI SSH operations panel."
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncssh>=2.14.2",
    "bcrypt>=4.1.3",
    "cryptography>=42.0.8",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
